<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Main.csci3130groupassignment.Activites.JobRecyclerViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/JobRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:outlineAmbientShadowColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="3"
        tools:listitem="@layout/job_item_view" />

    <Spinner
        android:id="@+id/JobTypeSpinner"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:layout_marginStart="135dp"
        android:layout_marginBottom="100dp"
        android:background="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/JobRecyclerView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JobRecyclerView"
        app:layout_constraintVertical_bias="0.537" />

    <Button
        android:id="@+id/JobSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="13dp"
        android:text="Search"
        app:layout_constraintBottom_toTopOf="@+id/JobTypeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/JobRecyclerView"
        app:layout_constraintStart_toEndOf="@+id/JobTypeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/JobRecyclerView"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>